# lazy_gamedev_bot

./: Cargo.toml
src/: main.rs  run.sh
