[package]
name = "lazy_reminder"
version = "0.1.0"
authors = ["vlad <vladzhukovtirko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-tls = "0.4.1"
hyper = "0.13.2"
tokio = { version = "0.2", features = ["full"] }
once_cell = "1.3.1"