[package]
name = "lazy_reminder"
version = "0.1.0"
authors = ["vlad <vladzhukovtirko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#hyper-tls = "0.4.1"
#hyper = "0.13.2"
futures = "0.3.4"
tokio = { version = "0.2", features = ["full"] }
once_cell = "1.3.1"
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot.git", rev = "8e363c518" }
chrono = { version = "0.4.10", features = ["serde"] }
ron = "0.5.1"
serde = { version = "1.0.104", features = ["derive"]}
env_logger = "0.7.1"
log = "0.4.8"
